--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <%= javascript_include_tag 'http://www.google.com/jsapi' %>
+<%= javascript_include_tag 'http://www.google.com/jsapi' %>
 <% end %>
 <h2>Users</h2>
 <div class="span9">
@@ -26,18 +26,24 @@
         <th>Joined</th>
         <th>Visits</th>
         <th>Most Recent</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
       <% @users.each do |user| %>
-        <tr>
-          <td><%= link_to user.email, user %></td>
-          <td><%= user.created_at.to_date %></td>
-          <td><%= (user.confirmation_token.nil? ? (link_to "send invitation", invite_user_path(user)) : (link_to "resend", invite_user_path(user))) unless user.confirmed_at %></td>
-          <td><%= user.confirmed_at.to_date if user.confirmed_at %></td>
-          <td><%= user.sign_in_count if user.sign_in_count %></td>
-          <td><%= user.last_sign_in_at.to_date if user.last_sign_in_at %></td>
-        </tr>
+      <tr>
+        <td><%= link_to user.email, user %></td>
+        <td><%= user.created_at.to_date %></td>
+        <td><%= (user.confirmation_token.nil? ? (link_to "send invitation", invite_user_path(user)) : (link_to "resend", invite_user_path(user))) unless user.confirmed_at %></td>
+        <td><%= user.confirmed_at.to_date if user.confirmed_at %></td>
+        <td><%= user.sign_in_count if user.sign_in_count %></td>
+        <td><%= user.last_sign_in_at.to_date if user.last_sign_in_at %></td>
+        <td><%= if user.enabled? then
+          link_to "Disable", disable_user_path else
+          link_to "Enable", enable_user_path
+          end %>
+        </td>
+      </tr>
       <% end %>
     </tbody>
   </table>
